--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         }
         .container {
             display: grid;
-            grid-template-columns: repeat(2, 1fr); 
-            grid-template-rows: repeat(10, auto); 
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 10px;
             background-color: #ccc;
             padding: 20px;
@@ -27,7 +26,6 @@
             margin: 10px;
             padding: 10px;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         .search-input {
             padding: 10px;
